# cpp-sdk-appwrite

./: Account_8hpp.html  Account_8hpp__dep__incl.md5  Account_8hpp__incl.md5  Account_8hpp_source.html  AppwriteException_8hpp.html  AppwriteException_8hpp.js  AppwriteException_8hpp__incl.map  AppwriteException_8hpp__incl.md5  AppwriteException_8hpp_source.html  Appwrite_8hpp.js  CMakeLists.txt  Config_8hpp.html  Config_8hpp__incl.map  Databases_8hpp__dep__incl.map  Databases_8hpp__incl.map  Databases_8hpp__incl.md5  Doxyfile  Health_8hpp_source.html  HttpStatus_8hpp.html  HttpStatus_8hpp__dep__incl.md5  HttpStatus_8hpp_source.html  Makefile  Messaging_8hpp.html  Messaging_8hpp__dep__incl.md5  Messaging_8hpp__incl.map  Messaging_8hpp_source.html  Query_8hpp.html  Query_8hpp.js  Query_8hpp__dep__incl.map  Query_8hpp__dep__incl.md5  Query_8hpp__incl.map  README.md  Storage_8hpp__incl.map  Storage_8hpp_source.html  Utils_8hpp.js  Utils_8hpp__dep__incl.md5  Utils_8hpp__incl.md5  Utils_8hpp_source.html  Validator_8hpp.html  Validator_8hpp.js  (+76 more)
.github/workflows/: doxygen.yml  issue-create-automate-message.yml
cmake/: AppwriteSDKConfig.cmake.in
docs/html/: Account_8hpp.js  Account_8hpp__dep__incl.map  Account_8hpp__incl.map  AppwriteException_8hpp__dep__incl.map  AppwriteException_8hpp__dep__incl.md5  Appwrite_8hpp.html  Appwrite_8hpp__incl.map  Appwrite_8hpp__incl.md5  Appwrite_8hpp_source.html  Config_8hpp.js  Config_8hpp__incl.md5  Config_8hpp_source.html  Databases_8hpp.html  Databases_8hpp.js  Databases_8hpp__dep__incl.md5  Databases_8hpp_source.html  Health_8hpp.html  Health_8hpp.js  Health_8hpp__dep__incl.map  Health_8hpp__dep__incl.md5  Health_8hpp__incl.map  Health_8hpp__incl.md5  HttpStatus_8hpp.js  HttpStatus_8hpp__dep__incl.map  Messaging_8hpp.js  Messaging_8hpp__dep__incl.map  Messaging_8hpp__incl.md5  Query_8hpp__incl.md5  Query_8hpp_source.html  Storage_8hpp.html  Storage_8hpp.js  Storage_8hpp__dep__incl.map  Storage_8hpp__dep__incl.md5  Storage_8hpp__incl.md5  Utils_8hpp.html  Utils_8hpp__dep__incl.map  Utils_8hpp__incl.map  Validator_8hpp_source.html  classAccount-members.html  classAccount.html  (+39 more)
include/: Appwrite.hpp  Utils.hpp  Validator.hpp
include/classes/: Account.hpp  Databases.hpp  Health.hpp  Messaging.hpp  Query.hpp  Storage.hpp
include/config/: Config.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_5.js  all_7.js  all_8.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_8.js  enumvalues_9.js  files_0.js  files_2.js  files_3.js  files_4.js  files_5.js  files_8.js  functions_0.js  functions_1.js  (+14 more)
(+19 files in other folders)
